--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -1,24 +1,38 @@
-.popup__colors{
-    display: flex;
-    align-items: center;
-}
-
-.popup__colors-item{
-    list-style: none;
-    height: 20px;
-    width: 20px;
+.popup{
     display: inline-block;
-    border-radius:50%;
-    margin-right: 5px;
-    cursor: pointer;
-    border: 2px solid transparent;
+    width: 235px;
+    padding: 15px 18px;
+    background: #fff;
+    position: absolute;
+    top: 100%;
+    left: 0;
 
-    &:last-child{
-        margin-right: 0;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+
+    &__colors{
+        display: flex;
+        align-items: center;
+        margin-top: 13px;
     }
 
-    &--active{
-        border-color: #525252;
+    &__colors-item{
+        flex-shrink: 0;
+        height: 20px;
+        width: 20px;
+        display: inline-block;
+        border-radius:50%;
+        margin-right: 5px;
+        cursor: pointer;
+        border: 2px solid transparent;
+    
+        &:last-child{
+            margin-right: 0;
+        }
+    
+        &--active{
+            border-color: #525252;
+        }
+    
     }
-
 }
