--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,10 +1,53 @@
 .sidebar{
-    background: #FFBBCC;
+    background: #F4F6F8;
+    width: 200px;
+    padding: 50px 20px 0 20px;
+
+    &__list{
+        display: flex;
+        flex-direction: column;
+    }
 
     &__item{
+        border-radius: 4px;
+        padding: 10px 12px;
+        margin-bottom: 3px;
 
         &--active{
-            background: blue;
+            background: #FFFFFF;
         }
+
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+
+    &__link{
+        display: flex;
+        align-items: center;
+    }
+
+    &__title{
+        margin-left: 10px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.15px;
+
+        color: #000000;
+    }
+
+    &__color-bar{
+        display: inline-block;
+        flex-shrink: 0;
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+    }
+
+    &__button{
+        position: relative;
     }
 }
