--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,15 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap&subset=cyrillic');
+
+
+*{
+  box-sizing: border-box;
+}
+
+body , html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  height: 100%;
+  width: 100%;
+  font-family: 'Roboto' ,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +17,73 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  text-decoration: none;
+}
+
+ul, li{
+  list-style: none;
+  margin:0;
+  padding: 0;
+}
+
+input{
+  outline: none;
+  border: 1px solid transparent;
+}
+
+button{
+  outline: none;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.wrapper{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background:#FFBBCC;
+}
+
+.container{
+  max-width: 900px;
+  width: 100%;
+  margin:0 auto;
+  background: #fff;
+  display: flex;
+}
+
+
+.button{
+  &--cross{
+    margin-left: auto;
+  }
+
+  &--green{
+    background: #4DD599;
+    border-radius: 4px;
+  }
+
+  &--cross{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: #5C5C5C;
+  }
+}
+
+.input{
+  background: #FFFFFF;
+  border: 1px solid #EFEFEF;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 8px 11px;
+  width: 100%;
 }
