--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,7 +1,57 @@
 .tasks{
-    padding-left:50px;
+    padding: 0 50px;
+    flex: 1;
 
     &__head{
         display: flex;
+    }
+
+    &__item{
+        margin-bottom: 15px;
+
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+
+    &__label{
+        display: flex;
+        align-items: center;
+    }
+
+    &__input{
+        // display: none;
+    }
+
+    &__input:checked + .tasks__fake-input{
+        background:#4DD599;
+        border-color: #4DD599;
+    }
+
+    &__input:checked + .tasks__fake-input:before{
+        content: '\2713';
+    }
+
+    &__fake-input{
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        background:white;
+        border: 2px solid #E8E8E8;
+        border-radius: 50%;
+        position: relative;
+        transition: all .3s;
+        cursor: pointer;
+        margin-right: 15px;
+
+        &:before{
+            content: '';
+            display: inline-block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            color: #ffffff;
+        }
     }
 }
