--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+#root{
+  height: 100%;
+  width: 100%;
+}
+
 body , html {
   margin: 0;
   height: 100%;
@@ -51,6 +56,7 @@ button{
 .container{
   max-width: 900px;
   width: 100%;
+  height: 100%;
   margin:0 auto;
   background: #fff;
   display: flex;
@@ -85,5 +91,5 @@ button{
   box-sizing: border-box;
   border-radius: 4px;
   padding: 8px 11px;
-  width: 100%;
+  // width: 100%;
 }
