--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -13,19 +13,26 @@
 
     &__item{
         display: flex;
+        justify-content: space-between;
         align-items: center;
         border-radius: 4px;
-        padding: 10px 12px;
+        padding: 10px;
         margin-bottom: 3px;
         cursor: move;
 
         &--active{
             background: #FFFFFF;
+            box-shadow: 0 0 10px blue;
         }
 
         &:last-child{
             margin-bottom: 0;
         }
+    }
+
+    &__block{
+        display: flex;
+        align-items: center;
     }
 
     &__title{
