--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -6,6 +6,8 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 10;
+    margin-top: 13px;
 
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.05);
     border-radius: 10px;
@@ -14,25 +16,28 @@
         display: flex;
         align-items: center;
         margin-top: 13px;
-    }
 
-    &__colors-item{
-        flex-shrink: 0;
-        height: 20px;
-        width: 20px;
-        display: inline-block;
-        border-radius:50%;
-        margin-right: 5px;
-        cursor: pointer;
-        border: 2px solid transparent;
-    
-        &:last-child{
-            margin-right: 0;
+        &-item{
+            flex-shrink: 0;
+            height: 20px;
+            width: 20px;
+            display: inline-block;
+            border-radius:50%;
+            margin-right: 5px;
+            cursor: pointer;
+            border: 2px solid transparent;
+        
+            &:last-child{
+                margin-right: 0;
+            }
+        
+            &--active{
+                border-color: #525252;
+            }
         }
-    
-        &--active{
-            border-color: #525252;
+
+        &-button{
+            margin-top: 13px;
         }
-    
     }
 }
