--- a/src/index.scss
+++ b/src/index.scss
@@ -20,11 +20,6 @@ body , html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 a{
   text-decoration: none;
 }
@@ -72,10 +67,17 @@ button{
   &--green{
     background: #4DD599;
     border-radius: 4px;
+    font-weight: 700;
+    font-size: 14px;
+    color: #fff;
+    padding: 10px 0;
+    width: 100%;
   }
 
   &--cross{
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -83,6 +85,20 @@ button{
     top: -10px;
     right: -10px;
     background-color: #5C5C5C;
+  }
+
+  &--add-list{
+    color: #767676;
+    font-size: 14px;
+
+    &:before{
+      content: '+';
+      display: inline-block;
+      vertical-align: middle;
+      color: #767676;
+      margin-right: 10px;
+      font-size: 25px;
+    }
   }
 }
 
@@ -92,7 +108,6 @@ button{
   box-sizing: border-box;
   border-radius: 4px;
   padding: 8px 11px;
-  // width: 100%;
 }
 
 .ghost{
